--- a/appSettings.json
+++ b/appSettings.json
@@ -1,10 +1,10 @@
 {
   "Smtp": {
-    "FromAddress": "diskspacemonitor@uhg.com.au",
-    "Server": "mail.uhg.com.au",
+    "FromAddress": "",
+    "Server": "",
     "Port": "25",
     "UserName": "",
     "Password": "",
-    "Domain": "uhg.com.au"
+    "Domain": ""
   }
 }
